--- a/platforms/browser/www/manifest.json
+++ b/platforms/browser/www/manifest.json
@@ -1,10 +1,10 @@
 {
   "background_color": "#FFF",
   "display": "standalone",
-  "name": "HelloCordova",
-  "short_name": "HelloCordova",
-  "version": "io.cordova.hellocordova",
-  "description": "A sample Apache Cordova application that responds to the deviceready event.",
+  "name": "To do List App",
+  "short_name": "To do List App",
+  "version": "io.cordova.todolist-app",
+  "description": "Suherni 6703 To do app",
   "author": "Apache Cordova Team",
   "icons": [],
   "start_url": "index.html"
